add some padding

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -174,7 +174,7 @@ layout: page
                           {% for grouptag in tagArray %}
 
                             <tr>
-                              <td><strong>{{ grouptag }}</strong></td>
+                              <td style="padding-top: 5px;"><strong>{{ grouptag }}</strong></td>
                             </tr>
 
                             {% for spec in openapi_spec_json %}
