--- a/documentation/index.html
+++ b/documentation/index.html
@@ -98,7 +98,7 @@ layout: page
                 {% assign api_action_url = '' %}
                 {% for api in apijson.apis %}
 
-                <table cellpadding="3" cellspacing="2" width="100%" border="0">
+                <table cellpadding="3" cellspacing="2" width="100%" border="1">
 
                     {% assign api_action_spec = '' %}
                     {% assign api_action_url = '' %}
@@ -141,18 +141,16 @@ layout: page
                     {% endfor %}
 
                     <tr>
-                      <td align="left">
-                        <p style="font-size: 18px;"><strong>{{ api.name }}</strong></p>
-                      </td>
+                      <td align="left" style="font-size: 18px; font-weight: bold;">{{ api.name }}</td>
                       <td align="right">
                         {% if openapi_spec_url != null and openapi_spec_url != empty %}
-                          (<a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="font-size: 11px; padding: 3px;">OpenAPI Spec</a>)
+                          (<a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="font-size: 11px;">OpenAPI Spec</a>)
                         {% endif %}
                       </td>
                     </tr>
                     <tr id="methods-for-{{ pathname }}">
-                      <td colspan="2" align="left" style="margin-left: 25px; margin-right: 25px;">
-                        <table width="100%">
+                      <td colspan="2" style="margin-left: 50px; margin-right: 50px;">
+                        <table width="80%" border="1">
 
                           {% assign taglist = '' %}
                           {% for spec in openapi_spec_json %}
