--- a/documentation/index.html
+++ b/documentation/index.html
@@ -190,11 +190,8 @@ layout: page
                                     <tr>
                                       <td style="padding-left: 20px; font-size: 12px;">{{ path[0] }}</td>
                                       <td style="font-size: 12px;">{{ summary }}</td>
-                                      <td align="center">
-                                        {% if verb == 'GET' %}<span style="color:#009900; font-weight:bold; font-size: 12px;">GET</span>{% endif %}
-                                        {% if verb == 'POST' %}<span style="color:#0000ff; font-weight:bold; font-size: 12px;">POST</span>{% endif %}
-                                        {% if verb == 'PUT' %}<span style="color:#FF0080; font-weight:bold; font-size: 12px;">PUT</span>{% endif %}
-                                        {% if verb == 'DELETE' %}<span style="color:#FF9900; font-weight:bold; font-size: 12px;">DELETE</span>{% endif %}
+                                      <td align="center" style="background-color:{% if verb == 'GET' %}#009900{% elsif verb == 'GET' %}#009900{% elsif verb == 'POST' %}#0000ff{% elsif verb == 'PUT' %}#FF0080{% elsif verb == 'DELETE' %}#FF9900{% endif %}; font-weight: bold; font-size: 18px;">
+                                        {{ verb }}
                                       </td>
                                     </tr>
                                   {% endif %}
