--- a/documentation/index.html
+++ b/documentation/index.html
@@ -88,7 +88,7 @@ layout: page
   </tr>
   <tr>
     <td>
-      <table width="100%" border="1">
+      <table width="100%" border="1" style="padding-top: 10px;">
         <tr>
         <td align="center" style="margin-left: 90px; margin-right: 90px;">
 
