--- a/documentation/index.html
+++ b/documentation/index.html
@@ -81,7 +81,7 @@ layout: page
 {% endfor %}
 
   <tr>
-    <td>
+    <td style="padding: 30px;">
       <a href="{{ site.url }}" style="font-size: 22px;"><strong>Documentation for {{ apijson.name }}</strong></a><br />
       {{ apijson.description }}
     </td>
