add some background color

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -144,7 +144,7 @@ layout: page
 
                     {% endfor %}
 
-                    <tr>
+                    <tr style="background-color: #D3D3D3;">
                       <td align="left" style="font-size: 18px; font-weight: bold;">{{ api.name }}</td>
                       <td align="right">
                         {% if openapi_spec_url != null and openapi_spec_url != empty %}
