--- a/documentation/index.html
+++ b/documentation/index.html
@@ -145,16 +145,16 @@ layout: page
                     {% endfor %}
 
                     <tr style="background-color: #D3D3D3;">
-                      <td align="left" style="font-size: 18px; font-weight: bold;">{{ api.name }}</td>
-                      <td align="right">
+                      <td align="left" style="font-size: 18px; font-weight: bold; padding: 5px;">{{ api.name }}</td>
+                      <td align="right" style="font-size: 18px; font-weight: bold; padding: 5px;">
                         {% if openapi_spec_url != null and openapi_spec_url != empty %}
-                          (<a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="font-size: 11px;">OpenAPI Spec</a>)
+                          <a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="font-size: 11px;">OpenAPI Spec</a>
                         {% endif %}
                       </td>
                     </tr>
                     <tr id="methods-for-{{ pathname }}">
                       <td colspan="2">
-                        <table width="100%" border="0" style="margin-left: 15px; margin-right: 15px;">
+                        <table width="95%" border="0" style="margin-left: 15px; margin-right: 15px;">
 
                           {% assign taglist = '' %}
                           {% for spec in openapi_spec_json %}
@@ -194,7 +194,7 @@ layout: page
                                     <tr>
                                       <td style="padding-left: 20px; font-size: 12px;">{{ path[0] }}</td>
                                       <td style="font-size: 12px;">{{ summary }}</td>
-                                      <td align="center" style="width: 75px; background-color:{% if verb == 'GET' %}#009900{% elsif verb == 'GET' %}#009900{% elsif verb == 'POST' %}#0000ff{% elsif verb == 'PUT' %}#FF0080{% elsif verb == 'DELETE' %}#FF9900{% endif %}; font-weight: bold; font-size: 11px; color: #FFF;">
+                                      <td align="center" style="width: 75px; background-color:{% if verb == 'GET' %}#{{ site.get_color }}{{% elsif verb == 'POST' %}#{{ site.post_color }}{% elsif verb == 'PUT' %}#{{ site.put_color }}{% elsif verb == 'DELETE' %}#{{ site.get_color }}{% endif %}; font-weight: bold; font-size: 11px; color: #FFF;">
                                         {{ verb }}
                                       </td>
                                     </tr>
