--- a/documentation/index.html
+++ b/documentation/index.html
@@ -82,7 +82,7 @@ layout: page
 
   <tr>
     <td>
-      <a href="{{ site.url }}" style="font-size: 22px;"><strong>Documentation for {{ apijson.name }}</strong></a><br />
+      <a href="{{ site.url }}" style="font-size: 22px;"><strong>API Documentation</strong></a><br />
     </td>
   </tr>
   <tr>
