--- a/documentation/index.html
+++ b/documentation/index.html
@@ -188,6 +188,7 @@ layout: page
                                   {% assign tag = tagarray[0] %}
 
                                   {% assign verb = method[0] | upcase %}
+
                                   {% if verb == 'GET' %}
                                     {% assign back_color = site.get_color %}
                                   {% endif %}
@@ -207,7 +208,7 @@ layout: page
                                     <tr>
                                       <td style="padding-left: 20px; font-size: 12px;">{{ path[0] }}</td>
                                       <td style="font-size: 12px;">{{ summary }}</td>
-                                      <td align="center" style="padding: 5px; width: 75px; background-color:#{{ back_color }}; font-weight: bold; font-size: 11px; color: #FFF;">
+                                      <td align="center" style="padding: 5px; width: 75px; background-color:#000; font-weight: bold; font-size: 11px; color: #FFF;">
                                         {{ verb }}
                                       </td>
                                     </tr>
