--- a/documentation/index.html
+++ b/documentation/index.html
@@ -189,6 +189,19 @@ layout: page
 
                                   {% assign verb = method[0] | upcase %}
 
+                                  {% if verb == 'GET' %}
+                                    {% assign back_color = site.get_color %}
+                                  {% endif %}
+                                  {{% if verb == 'POST' %}
+                                    {% assign back_color = site.post_color %}
+                                  {% endif %}
+                                  {% if verb == 'PUT' %}
+                                    {% assign back_color = site.put_color %}
+                                  {% endif %}
+                                  {% if verb == 'DELETE' %}
+                                    {% assign back_color = site.delete_color %}
+                                  {% endif %}
+
                                   {% assign summary = method[1].summary %}
 
                                   {% if tag == grouptag %}
