--- a/documentation/index.html
+++ b/documentation/index.html
@@ -146,7 +146,7 @@ layout: page
 
                     <tr style="background-color: #D3D3D3;">
                       <td align="left" style="font-size: 18px; font-weight: bold; padding: 5px;">{{ api.name }}</td>
-                      <td align="right" style="font-size: 18px; font-weight: bold; padding: 5px;">
+                      <td align="right" style="padding: 5px;">
                         {% if openapi_spec_url != null and openapi_spec_url != empty %}
                           <a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="font-size: 18px;">OpenAPI Spec</a>
                         {% endif %}
