--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -8,7 +8,7 @@ layout: page
 <h1>{{ apigettingstarted.title }}</h1>
 <p><img src="{{ apigettingstarted.image }}" align="right" width="75" style="padding: 5px;" /></p>
 <p>{{ apigettingstarted.header }}</p>
-  <ol style="list-style-type: katakana;">
+  <ol style="list-style-type: upper-roman; margin-left: 25px;">
     {% for steps in apigettingstarted.steps %}
 			<li><a href="{{ site.url }}{{ steps.title }}"><strong>{{ steps.title }}</strong></a></li>
     {% endfor %}
