--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ layout: page
 
                                   {% if tag == grouptag %}
                                     <li style="font-size: 12px;">
-                                      {{ summary }}
+                                      <span style="color:#000; font-weight:bold;">{{ summary }}</span>
                                       (<span style="color:#{{ back_color }}; font-weight:bold;">{{ verb }}</span>)
                                     </li>
                                   {% endif %}
