fix missing bracket

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ layout: page
                                   {% endif %}
                                   {% if verb == 'DELETE' %}
                                     {% assign back_color = site.delete_color %}
-                                  {% endif %
+                                  {% endif %}
 
                                   {% assign summary = method[1].summary %}
 
