add some padding

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -145,10 +145,10 @@ layout: page
                     {% endfor %}
 
                     <tr style="background-color: #D3D3D3;">
-                      <td align="left" style="font-size: 18px; font-weight: bold; padding: 5px;">{{ api.name }}</td>
-                      <td align="right" style="padding: 5px;">
+                      <td align="left" style="font-size: 18px; font-weight: bold; padding: 10px;">{{ api.name }}</td>
+                      <td align="right" style="padding: 10px;">
                         {% if openapi_spec_url != null and openapi_spec_url != empty %}
-                          <a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="font-size: 18px;">OpenAPI Spec</a>
+                          <a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="font-size: 16px; font-weight: normal;">OpenAPI Spec</a>
                         {% endif %}
                       </td>
                     </tr>
