--- a/plans/index.html
+++ b/plans/index.html
@@ -1,18 +1,195 @@
 ---
 layout: page
-title: Pricing
+title: Plans
 ---
+<table cellpadding="3" cellspacing="2" width="100%" border="0">
+{% for folder in site.data %}
+  {% for item in folder %}
+    {% assign file = item %}
 
-<p><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-dollar-sign.jpg" align="right" width="150" style="padding: 15px;" /></p></p>
-<p>Provide simple, clear information about what an API costs. Break down pricing into packages, and units of value, and provide several tiers of access, with levels that are easy to climb.</p>
-<p>Break down the packages, and details, with self-service access:</p>
+    {% if file.apis != null %}
+      {% assign apijson = file.apis %}
 
-<ul>
-<li>Retail - Free API calls up to 500 per day, then $0.005 USD per API call.</li>
-<li>Pro - Free API calls up to 500 per day, then $0.001 USD per API call.</li>
-<li>Partner - Custom levels of access, just let me know, and I will consider.</li>
-<li>Wholesale - Deploy any of my API designs in private infrastructure.</li>
-</ul>
+      {% if apijson.specificationVersion != null %}
 
-<p>Make sure and provide a relief valve for pricing, allowing developers to pay for what they need. Be as transparent as possible about what the upper tiers of aceess look like, and what it takes to get ther.</p>
-<p>Look at the pricing of other popular APIs, to get an idea of the normal tkype of presenting pricing.</p>
+        {% assign blog_url = '' %}
+        {% assign blogrss_url = '' %}
+        {% assign portal_url = '' %}
+        {% assign gitub_url = '' %}
+        {% assign twitter_url = '' %}
+        {% assign website_url = '' %}
+
+        {% for common in apijson.x-common %}
+          {% if common.type == 'x-blog' %}
+            {% assign blog_url = common.url %}
+          {% endif %}
+          {% if common.type == 'x-blog-rss-feed' %}
+            {% assign blogrss_url = common.url %}
+          {% endif %}
+          {% if common.type == 'x-portal' %}
+            {% assign portal_url = common.url %}
+          {% endif %}
+          {% if common.type == 'x-github' %}
+            {% assign gitub_url = common.url %}
+          {% endif %}
+          {% if common.type == 'x-twitter' %}
+            {% assign twitter_url = common.url %}
+          {% endif %}
+        {% endfor %}
+
+        {% if apisjson.humanURL == null %}
+          {% assign website_url = portal_url %}
+        {% else %}
+          {% assign website_url = apisjson.humanURL %}
+        {% endif %}
+
+          <tr>
+            <td colspan="2">
+              {% if apijson.image != null %}
+                <a href="{{ website_url }}">
+                  <img src="{{ apijson.image }}" align="left" style="padding: 15px;" width="150" />
+                </a>
+              {% endif %}
+              <a href="{{ website_url }}" style="font-size: 22px;"><strong>{{ apijson.name }}</strong></a><br />
+              {{ apijson.description }}
+            </td>
+          </tr>
+          <tr>
+            <td align="center">
+              <ul style="list-style: none; display: inline;">
+                {% if portal_url != '' %}
+                  <li style="display: inline; padding-left: 15px; padding-right: 15px;">
+                    <a href="{{ portal_url }}" target="_blank" title="Portal">
+                      <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-portal-developers.jpg" width="36" align="center" />
+                    </a>
+                  </li>
+                {% endif %}
+                {% if blog_url != '' %}
+                  <li style="display: inline; padding-left: 15px; padding-right: 15px;">
+                    <a href="{{ blog_url }}" target="_blank" title="Blog">
+                      <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="36" align="center" />
+                    </a>
+                  </li>
+                {% endif %}
+
+                {% if blogrss_url != '' %}
+                  <li style="display: inline; padding-left: 15px; padding-right: 15px;">
+                    <a href="{{ blogrss_url }}" target="_blank" title="Blog RSS">
+                      <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="36" align="center" />
+                    </a>
+                  </li>
+                {% endif %}
+
+                {% if twitter_url != '' %}
+                  <li style="display: inline; padding-left: 15px; padding-right: 15px;">
+                    <a href="{{ twitter_url }}" target="_blank" title="Twitter">
+                      <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="55" align="center" />
+                    </a>
+                  </li>
+                {% endif %}
+
+                {% if gitub_url != '' %}
+                  <li style="display: inline; padding-left: 15px; padding-right: 15px;">
+                    <a href="{{ gitub_url }}" target="_blank" title="Github">
+                      <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github-icon.png" width="62" align="center" />
+                    </a>
+                  </li>
+                {% endif %}
+
+                {% if apijson.url != null %}
+                  <li style="display: inline; padding-left: 15px; padding-right: 15px;">
+                    <a href="{{ apijson.url }}" target="_blank" title="APIs.json">
+                      <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-api-a.png" width="61" align="center" />
+                    </a>
+                  </li>
+                {% endif %}
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="2" align="center">
+
+              {% for api in apijson.x-common %}
+
+                  {% assign thisname = apijson.name | downcase %}
+                  {% assign thisname = thisname | append:'/' %}
+                  {% assign thisname = thisname | replace: ' ','-' %}
+
+                  {% if api.type == 'x-api-plan' %}
+
+                    {% assign api_plan_url = api.url %}
+                    {% assign pathname = api_plan_url | replace: site.url,'' %}
+                    {% assign pathname = pathname | replace: '/data/','' %}
+
+                    {% assign pathname = pathname | replace: thisname,'' %}
+                    {% assign pathname = pathname | replace: '/','' %}
+                    {% assign pathname = pathname | replace: '.json','' %}
+                    {% assign api_plan_json = file | map: pathname %}
+
+                    <table cellpadding="3" cellspacing="2" width="90%" style="margin-bottom: 20px;">
+
+                    {% for entry in api_plan_json %}
+
+                        {% assign api_plan_json = entry[0] %}
+
+                        {% for plan in api_plan_json.plans %}
+
+                            {% assign entries = plan.entries %}
+
+                            <tr>
+                              <td colspan="10" style="padding-top: 5px; padding-bottom: 10px;"><strong>Plan Name: {{ plan.name }}</strong></td>
+                            </tr>
+
+                            <tr style="font-size: 12px; font-weight: bold;">
+                              <td>label</td>
+                              <td>description</td>
+                              <td>metric</td>
+                              <td>limit</td>
+                              <td>timeframe</td>
+                              <td>geo</td>
+                              <td>element</td>
+                              <td>one</td>
+                              <td>two</td>
+                              <td align="right">unit</td>
+                            </tr>
+
+                            {% for entry in entries %}
+
+                              <tr style="font-size: 11px;">
+                                <td>{{ entry.label }}</td>
+                                <td>{{ entry.description }}</td>
+                                <td>{{ entry.metric }}</td>
+                                <td>{{ entry.limit }}</td>
+                                <td>{{ entry.timeframe }}</td>
+                                <td>{{ entry.geo }}</td>
+                                <td>{{ entry.element }}</td>
+                                <td align="center">{{ entry.one }}</td>
+                                <td align="center">{{ entry.two }}</td>
+                                <td align="right">{{ entry.unit }}</td>
+                              </tr>
+
+                            {% endfor %}
+
+                        {% endfor %}
+
+                    {% endfor %}
+
+                  </table>
+
+                  {% endif %}
+
+              {% endfor %}
+
+            </td>
+          </tr>
+          <tr>
+            <td colspan="2">
+                <hr />
+            </td>
+          </tr>
+      {% endif %}
+    {% endif %}
+  {% endfor %}
+{% endfor %}
+</table>
+<p>API plans, the approach I use here is still work in progress, and very much in an alpha state. You can view it in <a href="/apis.json">the projects APIs.json file</a>.</p>
