--- a/plans/index.html
+++ b/plans/index.html
@@ -115,13 +115,18 @@ title: Plans
           {% if api.type == 'x-api-plan' %}
 
             {% assign api_plan_url = api.url %}
-            {% assign pathname = api_plan_url | replace: site.url,'' %}
-            {% assign pathname = pathname | replace: '/data/','' %}
+            {% assign openapi_spec_url = property.url %}
+            {% assign pathname = openapi_spec_url | replace: '_data/api-commons/','' %}
+            {% assign pathname = pathname | replace: '.yaml','' %}
+            {% assign pathname = pathname | replace: '/','.' %}
 
-            {% assign pathname = pathname | replace: thisname,'' %}
-            {% assign pathname = pathname | replace: '/','' %}
-            {% assign pathname = pathname | replace: '.json','' %}
-            {% assign api_plan_json = file | map: pathname %}
+            {% for entry in apicommons %}
+              {% assign thisname = entry[0] %}
+              {% assign thisentry = entry[1] %}
+              {% if thisname == pathname %}
+                {% assign api_plan_json = thisentry %}
+              {% endif %}
+            {% endfor %}
 
             <table cellpadding="3" cellspacing="2" width="90%" style="margin-bottom: 20px;">
 
