--- a/plans/index.html
+++ b/plans/index.html
@@ -41,69 +41,6 @@ title: Plans
 {% endif %}
 
   <tr>
-    <td colspan="2">
-      {% if apijson.image != null %}
-        <a href="{{ website_url }}">
-          <img src="{{ apijson.image }}" align="left" style="padding: 15px;" width="150" />
-        </a>
-      {% endif %}
-      <a href="{{ website_url }}" style="font-size: 22px;"><strong>{{ apijson.name }}</strong></a><br />
-      {{ apijson.description }}
-    </td>
-  </tr>
-  <tr>
-    <td align="center">
-      <ul style="list-style: none; display: inline;">
-        {% if portal_url != '' %}
-          <li style="display: inline; padding-left: 15px; padding-right: 15px;">
-            <a href="{{ portal_url }}" target="_blank" title="Portal">
-              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-portal-developers.jpg" width="36" align="center" />
-            </a>
-          </li>
-        {% endif %}
-        {% if blog_url != '' %}
-          <li style="display: inline; padding-left: 15px; padding-right: 15px;">
-            <a href="{{ blog_url }}" target="_blank" title="Blog">
-              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="36" align="center" />
-            </a>
-          </li>
-        {% endif %}
-
-        {% if blogrss_url != '' %}
-          <li style="display: inline; padding-left: 15px; padding-right: 15px;">
-            <a href="{{ blogrss_url }}" target="_blank" title="Blog RSS">
-              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="36" align="center" />
-            </a>
-          </li>
-        {% endif %}
-
-        {% if twitter_url != '' %}
-          <li style="display: inline; padding-left: 15px; padding-right: 15px;">
-            <a href="{{ twitter_url }}" target="_blank" title="Twitter">
-              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="55" align="center" />
-            </a>
-          </li>
-        {% endif %}
-
-        {% if gitub_url != '' %}
-          <li style="display: inline; padding-left: 15px; padding-right: 15px;">
-            <a href="{{ gitub_url }}" target="_blank" title="Github">
-              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github-icon.png" width="62" align="center" />
-            </a>
-          </li>
-        {% endif %}
-
-        {% if apijson.url != null %}
-          <li style="display: inline; padding-left: 15px; padding-right: 15px;">
-            <a href="{{ apijson.url }}" target="_blank" title="APIs.json">
-              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-api-a.png" width="61" align="center" />
-            </a>
-          </li>
-        {% endif %}
-      </ul>
-    </td>
-  </tr>
-  <tr>
     <td colspan="2" align="center">
 
       {% for api in apijson.x-common %}
@@ -111,7 +48,7 @@ title: Plans
           {% assign thisname = apijson.name | downcase %}
           {% assign thisname = thisname | append:'/' %}
           {% assign thisname = thisname | replace: ' ','-' %}
-
+          {{ api.type }}<br />
           {% if api.type == 'x-api-plan' %}
 
             {% assign api_plan_url = api.url %}
