--- a/plans/index.html
+++ b/plans/index.html
@@ -63,7 +63,7 @@ title: Plans
               {% endif %}
             {% endfor %}
 
-            <table cellpadding="3" cellspacing="2" width="90%" style="margin-bottom: 20px; margin-left: 25px; margin-right: 25px;">
+            <table cellpadding="3" cellspacing="2" width="85%" style="margin-bottom: 20px; padding-left: 25px; padding-right: 25px;">
 
             {% for entry in api_plan_json %}
 
@@ -77,7 +77,7 @@ title: Plans
                       <td colspan="10" style="padding-top: 5px; padding-bottom: 10px;"><strong>Plan Name: {{ plan.name }}</strong></td>
                     </tr>
 
-                    <tr style="font-size: 12px; font-weight: bold;">
+                    <!--<tr style="font-size: 12px; font-weight: bold;">
                       <td>label</td>
                       <td>description</td>
                       <td>metric</td>
@@ -88,7 +88,7 @@ title: Plans
                       <td>one</td>
                       <td>two</td>
                       <td align="right">unit</td>
-                    </tr>
+                    </tr>-->
 
                     {% for entry in entries %}
 
