--- a/plans/index.html
+++ b/plans/index.html
@@ -41,7 +41,7 @@ title: Plans
 {% endif %}
 
   <tr>
-    <td colspan="2" align="center">
+    <td align="center">
 
       {% for api in apijson.x-common %}
 
@@ -63,7 +63,7 @@ title: Plans
               {% endif %}
             {% endfor %}
 
-            <table cellpadding="3" cellspacing="2" width="85%" style="margin-bottom: 20px; padding-left: 25px; padding-right: 25px;">
+            <table cellpadding="3" cellspacing="2" width="95%" style="margin-bottom: 20px; padding-left: 20px; padding-right: 20px;">
 
             {% for entry in api_plan_json %}
 
@@ -74,7 +74,7 @@ title: Plans
                     {% assign entries = plan.entries %}
 
                     <tr>
-                      <td colspan="12" style="padding-top: 5px; padding-bottom: 10px;"><strong>Plan Name: {{ plan.name }}</strong></td>
+                      <td colspan="12" style="padding-top: 5px; padding-bottom: 10px;"><strong>{{ plan.name }}</strong></td>
                     </tr>
 
                     <!--<tr style="font-size: 12px; font-weight: bold;">
