--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ layout: page
 					<td><a href="{{ documentation_url }}" id="x-documentation-url">Documentation</a><div id="d-documentation"></div></td>
 				</tr>
         {% endif %}
-        {% if code_url != '' %}
+        {% if code_page_url != '' %}
 				<tr id="x-code-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="{{ code_url }}" id="x-code-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-code.png" width="35" /></a></td>
