--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@ layout: page
 					<td><a href="{{ documentation_url }}" id="x-documentation-url">Documentation</a><div id="d-documentation"></div></td>
 				</tr>
         {% endif %}
-        {% if code_page_url != empty %}
+        {% if code_page_url != null %}
 				<tr id="x-code-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="{{ code_url }}" id="x-code-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-code.png" width="35" /></a></td>
-					<td>11{{ code_url }}<a href="{{ code_url }}" id="x-code-url">Code</a><div id="d-code"></div></td>
+					<td><a href="{{ code_url }}" id="x-code-url">Code</a><div id="d-code"></div></td>
 				</tr>
         {% endif %}
         {% if plan_url != '' %}
@@ -215,11 +215,11 @@ layout: page
 					<td><a href="{{ plan_url }}" id="x-plan-url">Plans</a><div id="d-plan"></div></td>
 				</tr>
         {% endif %}
-        {% if rate_limit_url != empty %}
+        {% if rate_limit_url != null %}
 				<tr id="x-rate-limits-page-row">
 					<td width="25" style="height: 55px;"></td>
 					<td width="75" align="center" valign="middle"><a href="{{ rate_limit_url }}" id="x-rate-limits-page-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-speed-limit.jpeg" width="35" /></a></td>
-					<td>22{{ rate_limit_url }}<a href="{{ rate_limit_url }}" id="x-rate-limits-page-url">Rate Limits</a><div id="d-rate-limits"></div></td>
+					<td><a href="{{ rate_limit_url }}" id="x-rate-limits-page-url">Rate Limits</a><div id="d-rate-limits"></div></td>
 				</tr>
         {% endif %}
         {% if support_url != '' %}
