--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@ layout: page
   <tr>
     <td colspan="2" align="center" style="margin-left: 25px; margin-right: 25px;">
       <ul style="list-style: none; display: inline;">
-        {% if blog_url != '' %}
+        {% if blog_url != null %}
           <li style="display: inline; padding-left: 15px; padding-right: 15px;">
             <a href="{{ blog_url }}" target="_blank" title="Blog">
               <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="36" align="center" />
             </a>
           </li>
         {% endif %}
-        {% if blogrss_url != '' %}
+        {% if blog_rss_url != null %}
           <li style="display: inline; padding-left: 15px; padding-right: 15px;">
             <a href="{{ blogrss_url }}" target="_blank" title="Blog RSS">
               <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="36" align="center" />
@@ -131,18 +131,18 @@ layout: page
           </li>
         {% endif %}
 
-        {% if twitter_url != '' %}
+        {% if twitter_url != null %}
           <li style="display: inline; padding-left: 15px; padding-right: 15px;">
             <a href="{{ twitter_url }}" target="_blank" title="Twitter">
-              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="55" align="center" />
+              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="51" align="center" />
             </a>
           </li>
         {% endif %}
 
-        {% if gitub_url != '' %}
+        {% if gitub_url != null %}
           <li style="display: inline; padding-left: 15px; padding-right: 15px;">
             <a href="{{ gitub_url }}" target="_blank" title="Github">
-              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github-icon.png" width="62" align="center" />
+              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github-icon.png" width="58" align="center" />
             </a>
           </li>
         {% endif %}
