--- a/documentation/index.html
+++ b/documentation/index.html
@@ -206,8 +206,8 @@ layout: page
 
                                   {% if tag == grouptag %}
                                     <tr>
-                                      <td style="font-size: 12px;">{{ summary }}</td>
-                                      <td style="padding-left: 20px; font-size: 12px;">{{ path[0] }}</td>
+                                      <td style="padding-left: 20px; font-size: 12px;">{{ summary }}</td>
+                                      <td style="font-size: 12px;">{{ path[0] }}</td>
                                       <td align="center" style="padding: 5px; width: 75px; background-color:#{{ back_color }}; font-weight: bold; font-size: 11px; color: #FFF;">
                                         {{ verb }}
                                       </td>
