--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ layout: page
   {% if common.type == 'x-road-map' %}
     {% assign road_map_url = common.url %}
   {% endif %}
-  {% if common.type == 'x-issue' %}
+  {% if common.type == 'x-issues' %}
     {% assign issue_url = common.url %}
   {% endif %}
   {% if common.type == 'x-change-log' %}
