--- a/documentation/index.html
+++ b/documentation/index.html
@@ -57,7 +57,7 @@ layout: page
   {% if common.type == 'x-road-map' %}
     {% assign road_map_url = common.url %}
   {% endif %}
-  {% if common.type == 'x-issue' %}
+  {% if common.type == 'x-issues' %}
     {% assign issue_url = common.url %}
   {% endif %}
   {% if common.type == 'x-change-log' %}
@@ -176,7 +176,7 @@ layout: page
                           {% for grouptag in tagArray %}
 
                             <tr>
-                              <td colspan="3" style="padding-top: 5px;"><strong>{{ grouptag }}</strong></td>
+                              <td colspan="3" style="padding-top: 10px;"><strong>{{ grouptag }}</strong></td>
                             </tr>
 
                             {% for spec in openapi_spec_json %}
