--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ layout: page
     {% assign support_url = common.url %}
   {% endif %}
 
-  {% if common.type == 'x-api-plan' %}
+  {% if common.type == 'x-dedicated-plans--pricing-page' %}
     {% assign plan_url = common.url %}
   {% endif %}
   {% if common.type == 'x-rate-limit' %}
