--- a/documentation/index.html
+++ b/documentation/index.html
@@ -155,7 +155,7 @@ layout: page
                     <tr id="methods-for-{{ pathname }}">
                       <td colspan="2">
                         <table width="95%" border="0" style="margin-left: 15px; margin-right: 15px;">
-
+{{ openapi_spec_json }}
                           {% assign taglist = '' %}
                           {% for spec in openapi_spec_json %}
                             {% for path in spec.paths %}
