--- a/documentation/index.html
+++ b/documentation/index.html
@@ -20,7 +20,7 @@ layout: page
 {% assign apijson = index[0] %}
 {% assign contents = site.data.api-commons %}
 {% assign apicommons = contents %}
-
+{{ apicommons }}
 {% assign blog_url = '' %}
 {% assign blogrss_url = '' %}
 {% assign portal_url = '' %}
