--- a/documentation/index.html
+++ b/documentation/index.html
@@ -115,7 +115,7 @@ layout: page
                       {% assign thisname = thisname | replace: ' ','-' %}
 
                       {% if property.type == 'x-openapi-spec' %}
-
+{{ property.type }}
                         {% assign openapi_spec_url = property.url %}
                         {% assign pathname = openapi_spec_url | replace: '_data/api-commons/','' %}
                         {% assign pathname = pathname | replace: '.yaml','' %}
