--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ layout: page
                       <td align="right">
                         (<a href="http://{{ site.org }}.github.io/{{ site.repo }}/{{ documentation_url }}" title="View Documentation" style="padding: 3px;">Documentation</a>)
                         {% if openapi_spec_url != null and openapi_spec_url != empty %}
-                          (<a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="padding: 3px;">OpenAPI Spec</a>)
+                          (<a href="{{ site.url }}{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="padding: 3px;">OpenAPI Spec</a>)
                         {% endif %}
                       </td>
                     </tr>
