--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@ layout: page
                         {% assign openapi_spec_url = property.url %}
                         {% assign pathname = openapi_spec_url | replace: '_data/api-commons/','' %}
                         {% assign pathname = pathname | replace: '.yaml','' %}
+                        {% assign pathname = pathname | replace: '.json','' %}
                         {% assign pathname = pathname | replace: '/','.' %}
 
                         {% for entry in apicommons %}
