fix it on home page

--- a/index.html
+++ b/index.html
@@ -313,12 +313,12 @@ layout: page
                       {% assign thisname = thisname | replace: ' ','-' %}
 
                       {% if property.type == 'x-openapi-spec' %}
-
                         {% assign openapi_spec_url = property.url %}
                         {% assign pathname = openapi_spec_url | replace: '_data/api-commons/','' %}
                         {% assign pathname = pathname | replace: '.yaml','' %}
                         {% assign pathname = pathname | replace: '.json','' %}
                         {% assign pathname = pathname | replace: '/','.' %}
+                        {% assign pathname = pathname | replace: 'api-commons.','' %}
 
                         {% for entry in apicommons %}
                           {% assign thisname = entry[0] %}
