--- a/issues/index.html
+++ b/issues/index.html
@@ -9,7 +9,7 @@ layout: page
 <p><img src="{{ apiissues.image }}" align="right" width="75" style="padding: 5px;" /></p>
 <p>{{ apiissues.header }}</p>
 <center>
-<table cellpadding="10" cellspacing="10" width="90%">
+<table cellpadding="10" cellspacing="10" width="90%" style="margin-bottom: 10px;">
 	{% for current in apiissues.current %}
     <tr>
   		<td align="left" valign="top">
