--- a/road-map/index.html
+++ b/road-map/index.html
@@ -9,7 +9,7 @@ layout: page
 <p><img src="{{ apiroadmap.image }}" align="right" width="75" style="padding: 5px;" /></p>
 <p>{{ apiroadmap.header }}</p>
 <center>
-<table cellpadding="10" cellspacing="10" width="90%">
+<table cellpadding="10" cellspacing="10" width="90%" style="margin-bottom: 10px;">
 	{% for plans in apiroadmap.plans %}
     <tr>
   		<td align="left" valign="top">
