--- a/plans/index.html
+++ b/plans/index.html
@@ -68,7 +68,9 @@ title: Plans
 
             <table cellpadding="3" cellspacing="2" width="95%" style="margin-bottom: 20px; padding-left: 20px; padding-right: 20px;">
 
-              {{ api_plan_json }}
+              {{ api_plan_json.plans }}
+              ----
+              {{ api_plan_json[1] }}
               {% for plan in api_plan_json.plans %}
 
                   {% assign entries = plan.entries %}
