--- a/plans/index.html
+++ b/plans/index.html
@@ -65,12 +65,11 @@ title: Plans
                 {% assign api_plan_json = thisentry %}
               {% endif %}
             {% endfor %}
-
+HERE:
             <table cellpadding="3" cellspacing="2" width="95%" style="margin-bottom: 20px; padding-left: 20px; padding-right: 20px;">
 
-              {{ api_plan_json.plans }}
-              ----
-              {{ api_plan_json[0] }}
+              {% assign api_plan_json = api_plan_json[0 %}
+              {{ api_plan_json }}
               {% for plan in api_plan_json.plans %}
 
                   {% assign entries = plan.entries %}
